# AIGYM

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  STATUS.md  personality_loader_manifest.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/apm/: baseline.yaml
examples/: agent_min.yaml
examples/manifest/: minimal.yaml  transformer.yaml
scripts/: aigym_db.py  aigym_db_show.py
src/aigym/: calibrate.py  cli.py  compare.py  db.py  validate.py
src/aigym/schema/: manifest.schema.json
tests/: test_apm.py  test_compare.py  test_validate.py
